--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php: [ '8.0' ]
+                php: [ '8.0', '8.1' ]
                 symfony: [ '5.4.*', '6.0.*' ]
         name: Test on Symfony ${{ matrix.symfony }} with PHP ${{ matrix.php }}
         steps:
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
             -   uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php }}
@@ -28,15 +28,15 @@ jobs:
             -   run: composer require symfony/form:${{ matrix.symfony }} --no-update
             -   run: composer install
             -   run: make test
-    test-hightest:
+    test-highest:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php: [ '8.1' ]
-                symfony: [ '6.1.*' ]
+                php: [ '8.2' ]
+                symfony: [ '6.2.*' ]
         name: Test on Symfony ${{ matrix.symfony }} with PHP ${{ matrix.php }}
         steps:
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
             -   uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php }}
@@ -53,7 +53,7 @@ jobs:
                 symfony: [ '5.4.*']
         name: Test lowest on Symfony ${{ matrix.symfony }} with PHP ${{ matrix.php }}
         steps:
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
             -   uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php }}
@@ -65,7 +65,7 @@ jobs:
     php-cs-fixer:
         runs-on: ubuntu-latest
         steps:
-            -   uses: actions/checkout@v1
+            -   uses: actions/checkout@v3
             -   name: Run PHP-CS-Fixer
                 uses: docker://jakzal/phpqa
                 with:
