--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,15 @@
         "psr/cache": "^3.0",
         "symfony/framework-bundle": "^5.4|^6.0",
         "symfony/form": "^5.4 || ^6.0",
-        "doctrine/orm": "^2.6.3|^2.7",
-        "doctrine/annotations": "^1.14|^2.0"
+        "doctrine/orm": "^2.7",
+        "doctrine/annotations": "^1.14 || ^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
-        "mockery/mockery": "^1.3",
+        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.5",
         "doctrine/doctrine-bundle": "^2.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.3",
         "nyholm/symfony-bundle-test": "^2.0.0",
         "symfony/translation": "^5.4 || ^6.0",
         "symfony/security-core": "^5.4 || ^6.0",
