--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "psr/cache": "^3.0",
         "symfony/framework-bundle": "^5.4|^6.0",
         "symfony/form": "^5.4 || ^6.0",
-        "doctrine/orm": "^2.8",
-        "doctrine/annotations": "^1.14 || ^2.0"
+        "doctrine/orm": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
