--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,11 +68,11 @@ jobs:
     php-cs-fixer:
         # https://github.com/jakzal/phpqa php-cs-fixer is not supported for php 8.2 (checked on 07-02-2023)
         # https://github.com/jakzal/phpqa/issues/398
-        runs-on: ubuntu-20.04
-        #runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
             -   name: Run PHP-CS-Fixer
-                uses: docker://jakzal/phpqa
+                #uses: docker://jakzal/phpqa
+                uses: docker://jakzal/phpqa:php8.1-alpine
                 with:
                     args: php-cs-fixer fix --dry-run
